--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ addons:
   chrome: stable
 
 cache:
-  directories:
-    - $HOME/.npm
+  yarn: true
 
 env:
   global:
@@ -19,8 +18,22 @@ env:
     - JOBS=1
 
 before_install:
-  - npm config set spin false
+- curl -o- -L https://yarnpkg.com/install.sh | bash
+- export PATH=$HOME/.yarn/bin:$PATH
+- yarn global add greenkeeper-lockfile@1
+
+install:
+- yarn install --non-interactive
+
+before_script: greenkeeper-lockfile-update
 
 script:
-  - npm run lint:js
-  - npm test
+- yarn lint:js
+- yarn test
+
+after_script: greenkeeper-lockfile-upload
+
+after_success:
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && node_modules/.bin/ember deploy staging --activate
+- test $TRAVIS_TAG && node_modules/.bin/ember deploy production --activate
+
