--- a/package.json
+++ b/package.json
@@ -14,42 +14,122 @@
     "build": "ember build",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "ember test",
+    "lint:style": "stylelint app/styles"
   },
   "devDependencies": {
+    "@ember/jquery": "^0.5.2",
+    "@ember/optional-features": "^0.7.0",
+    "broccoli-asset-rev": "^3.0.0",
+    "broccoli-file-creator": "^2.1.1",
+    "broccoli-merge-trees": "^3.0.1",
+    "browserslist": "^4.0.0",
+    "caniuse-db": "^1.0.30000893",
     "broccoli-asset-rev": "^2.7.0",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.3.0",
-    "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
+    "ember-ajax": "^3.1.0",
+    "ember-auto-import": "^1.2.13",
+    "ember-chrome-devtools": "^0.2.0",
+    "ember-cli": "3.5.0",
+    "ember-cli-app-version": "^3.2.0",
+    "ember-cli-autoprefixer": "0.8.1",
+    "ember-cli-babel": "^6.16.0",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-dependency-lint": "1.1.1",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-aws-pack": "^1.0.1",
-    "ember-cli-eslint": "^4.2.1",
+    "ember-cli-deprecation-workflow": "1.0.0",
+    "ember-cli-document-title": "0.4.0",
+    "ember-cli-file-saver": "^1.2.2",
+    "ember-cli-flash": "1.6.6",
+    "ember-cli-head": "0.4.1",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-image-transformer": "^2.0.0",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-sass": "^7.1.7",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-data": "~3.3.0",
+    "ember-cli-image-transformer": "^2.0.0",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-new-version": "^1.3.0",
+    "ember-cli-page-object": "1.15.0-beta.3",
+    "ember-cli-sass": "8.0.1",
+    "ember-cli-server-variables": "2.2.0",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-click-outside": "^1.0.0",
+    "ember-composable-helpers": "^2.0.2",
+    "ember-data": "3.5.0",
+
     "ember-export-application-global": "^2.0.0",
-    "ember-fetch": "^5.1.1",
-    "ember-font-awesome": "^4.0.0-rc.4",
+    "ember-froala-editor": "^2.8.5",
+    "ember-inflector": "^3.0.0",
+    "ember-lifeline": "^3.0.0",
+    "ember-link-action": "^0.1.0",
     "ember-load": "0.0.12",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.0.0",
-    "ember-source": "~3.3.0",
-    "ember-tether": "^1.0.0",
+    "ember-noscript": "^2.0.0",
+    "ember-pad": "1.2.3",
+    "ember-qunit": "^3.4.1",
+    "ember-qunit-nice-errors": "^1.2.0",
+    "ember-resolver": "^5.0.1",
+    "ember-simple-charts": "^0.17.0",
+    "ember-source": "~3.5.0",
+    "ember-template-lint": "^1.0.0-beta.5",
+    "ember-test-selectors": "^1.0.0",
+    "ember-tether": "1.0.0",
+    "ember-truth-helpers": "^2.0.0",
+    "ember-uploader": "2.0.0",
+    "ember-web-app": "^2.2.0",
     "eslint-plugin-ember": "^5.0.0",
-    "ilios-common": "^17.0.0",
-    "loader.js": "^4.2.3",
-    "qunit-dom": "^0.6.2"
+    "ilios-common": "20.3.2",
+    "eslint": "^4.19.1",
+    "eslint-plugin-ember": "^5.2.0",
+    "ilios-common": "20.3.2",
+    "loader.js": "^4.7.0",
+    "normalize.css": "^8.0.0",
+    "pre-commit": "^1.2.2",
+    "qunit-dom": "^0.8.0",
+    "sass": "^1.13.2",
+    "stylelint": "^9.5.0",
+    "stylelint-config-recommended-scss": "^3.1.0",
+    "stylelint-scss": "^3.0.0",
+    "validator": "^10.0.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
-  }
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/ilios-error",
+      "lib/ilios-loading"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "ember-cli-babel",
+      "ember-cli-app-version",
+      "ember-cli-dependency-checker",
+      "ember-cli-htmlbars-inline-precompile",
+      "ember-cli-htmlbars",
+      "ember-cli-inject-live-reload",
+      "ember-cli-qunit",
+      "ember-cli-sri",
+      "ember-cli-uglify",
+      "ember-export-application-global",
+      "ember-load-initializers",
+      "ember-maybe-import-regenerator",
+      "ember-resolver",
+      "loader.js",
+      "qunit-dom",
+      "ember-inflector",
+      "ember-tether"
+    ]
+  },
+  "pre-commit": [
+    "lint:hbs",
+    "lint:style",
+    "lint:js"
+  ],
+  "private": true
 }
