--- a/package.json
+++ b/package.json
@@ -21,44 +21,43 @@
     "@csstools/postcss-sass": "^4.0.0",
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
-    "@ilios/eslint-config-ember": "^1.1.0",
-    "autoprefixer": "^9.4.8",
+    "@ilios/eslint-config-ember": "^2.0.1",
+    "autoprefixer": "^9.5.1",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-file-creator": "^2.1.1",
     "broccoli-merge-trees": "^3.0.1",
-    "browserslist": "^4.4.1",
-    "caniuse-db": "^1.0.30000938",
-    "ember-a11y": "^0.2.0",
-    "ember-a11y-testing": "^0.5.2",
-    "ember-ajax": "^4.0.0",
-    "ember-auto-import": "^1.2.20",
+    "browserslist": "^4.5.4",
+    "caniuse-db": "^1.0.30000960",
+    "ember-a11y": "^0.2.1",
+    "ember-a11y-testing": "^0.5.7",
+    "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.2.21",
     "ember-chrome-devtools": "^0.2.0",
-    "ember-cli": "~3.7.1",
+    "ember-cli": "~3.9.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.4.3",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-babel": "^7.7.3",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-dependency-lint": "1.1.3",
-    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy": "1.0.2",
     "ember-cli-deploy-aws-pack": "^1.0.1",
     "ember-cli-deprecation-workflow": "1.0.1",
-    "ember-cli-file-saver": "^1.2.2",
     "ember-cli-flash": "1.7.1",
     "ember-cli-head": "0.4.1",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-image-transformer": "^2.2.0",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-new-version": "^1.3.0",
+    "ember-cli-new-version": "^1.4.4",
     "ember-cli-postcss": "^4.2.0",
     "ember-cli-server-variables": "2.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^2.1.0",
-    "ember-click-outside": "^1.0.0",
-    "ember-composable-helpers": "^2.0.2",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-click-outside": "^1.0.4",
+    "ember-composable-helpers": "^2.2.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-froala-editor": "^2.8.5",
+    "ember-froala-editor": "^2.9.4",
     "ember-inflector": "^3.0.0",
-    "ember-lifeline": "^3.0.0",
+    "ember-lifeline": "^4.1.3",
     "ember-link-action": "^0.1.0",
     "ember-load": "0.0.17",
     "ember-load-initializers": "^1.1.0",
@@ -68,21 +67,21 @@
     "ember-qunit": "^3.4.1",
     "ember-qunit-nice-errors": "^1.2.0",
     "ember-resolver": "^5.1.2",
-    "ember-source": "~3.7.3",
+    "ember-source": "~3.9.1",
     "ember-template-lint": "^1.1.0",
+    "ember-test-selectors": "^2.1.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "2.0.0",
     "ember-web-app": "^2.2.0",
-    "eslint": "^5.14.1",
-    "eslint-plugin-ember": "^6.1.0",
-    "ilios-common": "25.2.0",
+    "eslint": "^5.16.0",
+    "ilios-common": "^25.2.0",
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.0",
     "pre-commit": "^1.2.2",
     "qunit-dom": "^0.8.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.1.0",
-    "stylelint-scss": "^3.5.3",
+    "stylelint-scss": "^3.5.4",
     "validator": "^10.11.0"
   },
   "engines": {
