--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ember-ajax": "^5.0.0",
     "ember-auto-import": "^1.3.0",
     "ember-chrome-devtools": "^0.2.0",
-    "ember-cli": "~3.9.0",
+    "ember-cli": "~3.10.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -43,8 +43,8 @@
     "ember-cli-deprecation-workflow": "1.0.1",
     "ember-cli-flash": "1.7.1",
     "ember-cli-head": "0.4.1",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-image-transformer": "^2.2.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-new-version": "^1.5.0",
@@ -60,20 +60,21 @@
     "ember-lifeline": "^4.1.4",
     "ember-link-action": "^0.1.0",
     "ember-load": "0.0.17",
-    "ember-load-initializers": "^1.1.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-noscript": "^2.0.0",
     "ember-page-title": "^5.0.1",
-    "ember-qunit": "^3.4.1",
+    "ember-qunit": "^4.4.1",
     "ember-qunit-nice-errors": "^1.2.0",
     "ember-resolver": "^5.1.2",
-    "ember-source": "~3.9.1",
+    "ember-source": "~3.10.0",
     "ember-template-lint": "^1.1.0",
     "ember-test-selectors": "^2.1.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-uploader": "2.0.0",
     "ember-web-app": "^2.2.0",
     "eslint": "^5.16.0",
+    "eslint-plugin-node": "^9.0.1",
     "ilios-common": "^25.5.0",
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.0",
