--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ember-uploader": "2.0.0",
     "ember-web-app": "^3.0.1",
     "eslint": "^6.7.1",
+    "file-saver": "^2.0.2",
     "ilios-common": "^32.0.0",
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.0",
