--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ilios-common": "^32.0.0",
     "loader.js": "^4.7.0",
     "normalize.css": "^8.0.0",
+    "postcss-scss": "^2.0.0",
     "pre-commit": "^1.2.2",
     "qunit-dom": "^0.9.0",
     "stylelint": "^12.0.0",
@@ -89,5 +90,8 @@
     "lint:style",
     "lint:js"
   ],
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@ember/edition-utils": "^1.1.1"
+  }
 }
