--- a/.github/workflows/update-transitive-dependenies.yaml
+++ b/.github/workflows/update-transitive-dependenies.yaml
@@ -2,7 +2,8 @@ name: Update Transitive Dependencies
 
 on:
   schedule:
-    - cron: '15 11 * * 1' # weekly, on Monday morning (UTC)
+    - cron: '15 11 * * 0' # weekly, on Sunday morning (UTC)
+  workflow_dispatch:
 
 jobs:
   update:
@@ -19,7 +20,8 @@ jobs:
         rm package-lock.json
         npm install
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v2
+      id: cpr
+      uses: peter-evans/create-pull-request@v3
       with:
           token: ${{ secrets.ZORGBORT_TOKEN }}
           commit-message: Update Transitive Dependencies
@@ -31,4 +33,11 @@ jobs:
 
             [1]: https://github.com/peter-evans/create-pull-request
           branch: auto-update-dependencies
-          labels: dependencies,automerge
+          labels: dependencies
+    - name: Enable Pull Request Automerge
+      if: steps.cpr.outputs.pull-request-operation == 'created'
+      uses: peter-evans/enable-pull-request-automerge@v1
+      with:
+        token: ${{ secrets.ZORGBORT_TOKEN }}
+        pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+        merge-method: merge
