--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     "sass": "^1.49.9",
     "stylelint": "^14.5.3",
     "stylelint-config-recommended-scss": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
-    "validator": "^13.7.0"
+    "stylelint-scss": "^4.1.0"
   },
   "engines": {
     "node": "14.* || >= 16",
