--- a/package.json
+++ b/package.json
@@ -11,87 +11,95 @@
   "repository": "https://github.com/ilios/lti-course-manager",
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint:css": "stylelint \"**/*.scss\"",
+    "lint:css:fix": "concurrently \"npm:lint:scss -- --fix\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint test:*",
+    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test",
-    "lint:style": "stylelint app/styles",
     "deploy:production": "ember deploy production --activate",
     "deploy:staging": "ember deploy staging --activate",
     "deploy:test": "ember deploy development"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.9",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
     "@ember/edition-utils": "^1.2.0",
-    "@ember/jquery": "^2.0.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.2.5",
-    "@glimmer/component": "^1.0.4",
-    "@glimmer/tracking": "^1.0.4",
+    "@ember/string": "^3.1.1",
+    "@ember/test-helpers": "^2.9.3",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "@ilios/ember-template-lint-plugin": "^3.0.0",
     "autoprefixer": "^10.4.14",
-    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-file-creator": "^2.1.1",
     "broccoli-merge-trees": "^4.2.0",
     "browserslist": "^4.21.10",
     "caniuse-db": "^1.0.30001519",
+    "concurrently": "^8.0.1",
     "ember-a11y-testing": "^5.2.1",
     "ember-ajax": "^5.1.2",
-    "ember-auto-import": "^2.2.3",
-    "ember-cli": "~3.28.3",
-    "ember-cli-app-version": "^5.0.0",
-    "ember-cli-babel": "^7.26.6",
-    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-auto-import": "^2.6.3",
+    "ember-cli": "~4.12.1",
+    "ember-cli-app-version": "^6.0.0",
+    "ember-cli-babel": "^7.26.11",
+    "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-dependency-lint": "2.0.1",
     "ember-cli-deploy": "^2.0.0",
     "ember-cli-deploy-aws-pack": "^3.0.0",
-    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-image-transformer": "^5.0.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-server-variables": "3.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-export-application-global": "^2.0.1",
-    "ember-load": "^0.0.17",
     "ember-load-initializers": "^2.1.2",
+    "ember-modifier": "^4.1.0",
     "ember-noscript": "^4.1.0",
-    "ember-qunit": "^5.1.4",
-    "ember-resolver": "^8.0.2",
-    "ember-source": "3.28.0",
-    "ember-template-lint": "^3.6.0",
-    "ember-unique-id-helper-polyfill": "^1.2.2",
+    "ember-qunit": "^6.2.0",
+    "ember-resolver": "^10.0.0",
+    "ember-source": "4.12.0",
+    "ember-template-lint": "^5.7.2",
     "ember-web-app": "^5.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-qunit": "^7.0.0",
-    "ilios-common": "^73.0.2",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-ember": "^11.5.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.4",
+    "ilios-common": "^81.0.3",
     "loader.js": "^4.7.0",
-    "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.3.2",
-    "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0",
+    "prettier": "^2.8.7",
+    "qunit": "^2.19.4",
+    "qunit-dom": "^2.0.0",
     "sass": "^1.64.2",
     "stylelint": "^15.10.2",
     "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-prettier": "^3.0.0",
     "stylelint-scss": "^5.0.1",
+    "tracked-built-ins": "^3.1.1",
     "webpack": "^5.85.1"
   },
   "engines": {
-    "node": "14.* || >= 16",
+    "node": "16.* || >= 18",
     "npm": ">= 8"
   },
   "ember": {
     "edition": "octane"
+  },
+  "ember-addon": {
+    "paths": [
+      "lib/ilios-error",
+      "lib/ilios-loading"
+    ]
   },
   "pre-commit": [
     "lint"
