--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,52 @@
-name: Continuous Integration
+name: CI
 
 on:
   push:
     branches:
+      - main
       - master
-  pull_request:
+  pull_request: {}
   schedule:
     - cron: '23 6 * * 2' # weekly, on Tuesday morning
 
 env:
   CI: true
 
+concurrency:
+  group: ci-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  test:
-    name: Lint and Tests
+  lint:
+    name: "Lint"
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
+    timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: install dependencies
-      run: npm ci
-    - name: lint style
-      run: npm run lint:css
-    - name: lint hbs
-      run: npm run lint:hbs
-    - name: lint js
-      run: npm run lint:js
-    - name: test
-      run: npm test
+      - uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - name: Install Dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+
+  test:
+    name: "Test"
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm test
