--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   "repository": "https://github.com/ilios/lti-course-manager",
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:css": "stylelint \"**/*.scss\"",
-    "lint:css:fix": "concurrently \"npm:lint:scss -- --fix\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:css:fix": "concurrently \"pnpm:lint:css -- --fix\"",
+    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
+    "test": "concurrently \"pnpm:lint\" \"pnpm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test",
     "deploy:production": "ember deploy production --activate",
     "deploy:staging": "ember deploy staging --activate",
-    "deploy:test": "ember deploy development"
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-proposal-decorators": "^7.23.2",
+    "@babel/eslint-parser": "7.23.3",
+    "@babel/plugin-proposal-decorators": "^7.22.15",
     "@ember/edition-utils": "^1.2.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
@@ -37,14 +37,12 @@
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@ilios/ember-template-lint-plugin": "^3.0.0",
-    "autoprefixer": "^10.4.16",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-file-creator": "^2.1.1",
     "broccoli-merge-trees": "^4.2.0",
     "browserslist": "^4.22.3",
     "caniuse-db": "^1.0.30001581",
     "concurrently": "^8.2.2",
-    "ember-a11y-testing": "^6.1.1",
     "ember-ajax": "^5.1.2",
     "ember-auto-import": "^2.6.3",
     "ember-cli": "~5.3.0",
@@ -56,24 +54,22 @@
     "ember-cli-deploy": "^2.0.0",
     "ember-cli-deploy-aws-pack": "^3.0.0",
     "ember-cli-htmlbars": "^6.3.0",
-    "ember-cli-image-transformer": "^7.0.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^11.0.1",
-    "ember-cli-server-variables": "3.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
-    "ember-noscript": "^4.1.0",
+    "ember-page-title": "^8.0.0",
     "ember-qunit": "^8.0.1",
     "ember-resolver": "^11.0.1",
-    "ember-source": "5.3.0",
+    "ember-source": "~5.3.0",
     "ember-template-lint": "^5.11.2",
-    "ember-web-app": "^5.0.1",
+    "ember-web-app": "^5.0.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-ember": "^11.11.1",
-    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-qunit": "^8.0.0",
     "ilios-common": "^87.0.1",
@@ -82,9 +78,10 @@
     "prettier": "^3.0.3",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
-    "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recommended-scss": "^13.0.0",
+    "sass": "^1.70.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-recommended-scss": "^13.1.0",
+    "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.0.2",
     "stylelint-scss": "^5.3.2",
     "tracked-built-ins": "^3.2.0",
@@ -92,7 +89,8 @@
   },
   "engines": {
     "node": ">= 18",
-    "npm": ">= 8"
+    "yarn": "use pnpm",
+    "npm": "use pnpm"
   },
   "ember": {
     "edition": "octane"
