--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ember/optional-features": "^2.0.0",
     "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^3.2.0",
+    "@embroider/macros": "^1.13.5",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@ilios/ember-template-lint-plugin": "^3.0.0",
