Convert to monorepo layout
In preparation for moving the entire app into the frontend repository.

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,13 +1,10 @@
 # unconventional js
-/blueprints/*/files/
+/packages/*/blueprints/*/files/
 
 # compiled output
-/dist/
+/packages/*/dist/
 
 # misc
-/coverage/
+/packages/*/coverage/
 !.*
 .*/
-
-# ember-try
-/.node_modules.ember-try/
