--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -16,11 +16,11 @@ jobs:
         version: 8
     - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20
         cache: pnpm
     - run: pnpm install
     - name: Ember CLI Deploy
-      run: pnpm run deploy:production
+      run: pnpm run --filter lti-course-manager deploy:production
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
